kube-auth-proxy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-auth-proxy
  namespace: kube-auth-proxy
spec:
  ingressClassName: nginx
  rules:
  - host: api-basic.${clusterdomain:=undefined}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-auth-proxy
            port:
              number: 8080
